--- a/moek_editor_dockwidget_base.ui
+++ b/moek_editor_dockwidget_base.ui
@@ -37,10 +37,10 @@
    <string notr="true"/>
   </property>
   <property name="features">
-   <set>QDockWidget::DockWidgetClosable</set>
+   <set>QDockWidget::AllDockWidgetFeatures</set>
   </property>
   <property name="allowedAreas">
-   <set>Qt::LeftDockWidgetArea</set>
+   <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
    <string>MOEK Editor</string>
@@ -89,7 +89,7 @@
        <enum>QFrame::Plain</enum>
       </property>
       <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAsNeeded</enum>
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -109,7 +109,7 @@
          <x>0</x>
          <y>0</y>
          <width>466</width>
-         <height>85</height>
+         <height>90</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -137,7 +137,7 @@
         <item>
          <widget class="QFrame" name="frm_main">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
